--- a/ecd/jupyter/model/CNN.ipynb
+++ b/ecd/jupyter/model/CNN.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -20,27 +20,28 @@
      "text": [
       "Attempting to load processed data from: ../../data/sentences_eeg.pkl\n",
       "Successfully loaded processed data.\n",
-      "Loaded 5 items.\n",
+      "Loaded 7868 items.\n",
       "Shape of EEG chunk: (31, 78, 64)\n",
       "Example of first item: H\n",
-      "Example of first item: [[ 0.7758755   0.9237902   0.79516953 ...  1.7251105   1.8952785\n",
-      "   1.7748973 ]\n",
-      " [ 0.6073626   0.8665243   0.700175   ...  1.5955708   1.8149357\n",
-      "   1.6690725 ]\n",
-      " [ 0.47421762  0.85209244  0.63459575 ...  1.3974723   1.6194837\n",
-      "   1.4821903 ]\n",
+      "Example of first item: [[ 1.9504154   2.2442322   1.9698964  ...  1.4474702   1.3025287\n",
+      "   1.7617115 ]\n",
+      " [ 1.8555712   2.1287162   1.8950977  ...  1.6038033   1.4954389\n",
+      "   1.889984  ]\n",
+      " [ 1.7028829   1.9374998   1.7584169  ...  1.7040414   1.6331682\n",
+      "   1.9601816 ]\n",
       " ...\n",
-      " [-0.75434214 -1.0152866  -0.5195334  ... -0.3559552  -0.29637173\n",
-      "  -0.70139366]\n",
-      " [-0.59730214 -0.8856115  -0.3951398  ... -0.4825735  -0.5561047\n",
-      "  -0.848363  ]\n",
-      " [-0.5027137  -0.74316084 -0.2996873  ... -0.64054483 -0.853964\n",
-      "  -1.004107  ]]\n"
+      " [ 0.40570083 -0.01885907  0.21926583 ... -0.7260041  -0.72525847\n",
+      "  -0.72926086]\n",
+      " [ 0.45789889  0.0929183   0.399929   ... -0.6825177  -0.64262927\n",
+      "  -0.7352173 ]\n",
+      " [ 0.46558765  0.17591506  0.5342773  ... -0.6526491  -0.5673434\n",
+      "  -0.75709546]]\n"
      ]
     }
    ],
    "source": [
     "from bundle.DataCraft import * \n",
+    "from bundle.ModelCraft import * \n",
     "import numpy as np\n",
     "\n",
     "data = load_sentence_eeg_prob_data()\n",
@@ -60,11 +61,167 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-14T06:36:29.588404500Z",
-     "start_time": "2025-06-14T06:36:29.567735Z"
+     "end_time": "2025-06-14T16:18:47.697123700Z",
+     "start_time": "2025-06-14T16:18:35.899857900Z"
     }
    },
    "id": "773fcec84cee98ed"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\University\\Year 4 semester 2\\ENCS5300\\BrainWaveResearch\\ecd\\venv\\lib\\site-packages\\keras\\src\\layers\\convolutional\\base_conv.py:107: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data preprocessing and model compilation complete.\n",
+      "X_train shape: (6294, 31, 78, 64, 1)\n",
+      "y_train shape: (6294, 28)\n",
+      "Number of classes: 28\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pickle\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from tensorflow.keras.utils import to_categorical\n",
+    "\n",
+    "\n",
+    "# Prepare data\n",
+    "X = np.array([d[\"eeg_chunk\"] for d in data])\n",
+    "y = np.array([d[\"character\"] for d in data])\n",
+    "\n",
+    "# Encode labels\n",
+    "label_encoder = LabelEncoder()\n",
+    "y_encoded = label_encoder.fit_transform(y)\n",
+    "y_one_hot = to_categorical(y_encoded)\n",
+    "\n",
+    "# Split data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y_one_hot, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Reshape X for CNN (add channel dimension)\n",
+    "X_train = X_train.reshape(X_train.shape[0], 31, 78, 64, 1)\n",
+    "X_test = X_test.reshape(X_test.shape[0], 31, 78, 64, 1)\n",
+    "\n",
+    "# Create and compile model\n",
+    "model = create_eeg_cnn_model(input_shape=(31, 78, 64, 1), num_classes=len(label_encoder.classes_))\n",
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "print(\"Data preprocessing and model compilation complete.\")\n",
+    "print(\"X_train shape:\", X_train.shape)\n",
+    "print(\"y_train shape:\", y_train.shape)\n",
+    "print(\"Number of classes:\", len(label_encoder.classes_))\n",
+    "\n",
+    "# Save preprocessed data and model for later use\n",
+    "with open(\"preprocessed_data.pkl\", \"wb\") as f:\n",
+    "    pickle.dump({\n",
+    "        \"X_train\": X_train,\n",
+    "        \"X_test\": X_test,\n",
+    "        \"y_train\": y_train,\n",
+    "        \"y_test\": y_test,\n",
+    "        \"label_encoder\": label_encoder\n",
+    "    }, f)\n",
+    "\n",
+    "model.save(\"initial_eeg_cnn_model.h5\")\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-06-14T16:19:56.222440400Z",
+     "start_time": "2025-06-14T16:18:47.702125900Z"
+    }
+   },
+   "id": "4647a57a354cc392"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\University\\Year 4 semester 2\\ENCS5300\\BrainWaveResearch\\ecd\\venv\\lib\\site-packages\\tensorflow\\python\\data\\ops\\structured_function.py:258: UserWarning: Even though the `tf.config.experimental_run_functions_eagerly` option is set, this option does not apply to tf.data functions. To force eager execution of tf.data functions, please use `tf.data.experimental.enable_debug_mode()`.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001B[1m  5/197\u001B[0m \u001B[37m━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[1m18:01\u001B[0m 6s/step - accuracy: 0.0589 - loss: 4.4036"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "tf.config.run_functions_eagerly(True)\n",
+    "import pickle\n",
+    "from tensorflow.keras.models import load_model\n",
+    "\n",
+    "# Load preprocessed data\n",
+    "with open(\"preprocessed_data.pkl\", \"rb\") as f:\n",
+    "    data = pickle.load(f)\n",
+    "\n",
+    "X_train = data[\"X_train\"]\n",
+    "X_test = data[\"X_test\"]\n",
+    "y_train = data[\"y_train\"]\n",
+    "y_test = data[\"y_test\"]\n",
+    "num_classes = len(data[\"label_encoder\"].classes_)\n",
+    "\n",
+    "# Create and compile model (instead of loading a pre-compiled one)\n",
+    "model = create_eeg_cnn_model(input_shape=(31, 78, 64, 1), num_classes=num_classes)\n",
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# Train the model\n",
+    "history = model.fit(X_train, y_train, epochs=10, batch_size=32, validation_data=(X_test, y_test))\n",
+    "\n",
+    "# Evaluate the model\n",
+    "loss, accuracy = model.evaluate(X_test, y_test)\n",
+    "print(f\"Test Loss: {loss:.4f}\")\n",
+    "print(f\"Test Accuracy: {accuracy:.4f}\")\n",
+    "\n",
+    "# Save the trained model\n",
+    "model.save(\"trained_eeg_cnn_model.h5\")\n",
+    "\n",
+    "print(\"Model training and evaluation complete.\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-06-14T16:20:50.435863500Z",
+     "start_time": "2025-06-14T16:19:56.253441800Z"
+    }
+   },
+   "id": "b651393c1b766dd6"
   }
  ],
  "metadata": {
