--- a/ecd/jupyter/model/CNN.ipynb
+++ b/ecd/jupyter/model/CNN.ipynb
@@ -1,227 +1,184 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "source": [
-    "# Train a Convolutional Neural Network (CNN) on EEG data"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "ac1195a63f9f974c"
-  },
-  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "id": "initial_id",
+   "metadata": {
+    "collapsed": true,
+    "is_executing": true,
+    "ExecuteTime": {
+     "start_time": "2025-06-15T08:16:54.462279100Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Attempting to load processed data from: ../../data/sentences_eeg.pkl\n",
-      "Successfully loaded processed data.\n",
-      "Loaded 7868 items.\n",
-      "Shape of EEG chunk: (31, 78, 64)\n",
-      "Example of first item: H\n",
-      "Example of first item: [[ 1.9504154   2.2442322   1.9698964  ...  1.4474702   1.3025287\n",
-      "   1.7617115 ]\n",
-      " [ 1.8555712   2.1287162   1.8950977  ...  1.6038033   1.4954389\n",
-      "   1.889984  ]\n",
-      " [ 1.7028829   1.9374998   1.7584169  ...  1.7040414   1.6331682\n",
-      "   1.9601816 ]\n",
-      " ...\n",
-      " [ 0.40570083 -0.01885907  0.21926583 ... -0.7260041  -0.72525847\n",
-      "  -0.72926086]\n",
-      " [ 0.45789889  0.0929183   0.399929   ... -0.6825177  -0.64262927\n",
-      "  -0.7352173 ]\n",
-      " [ 0.46558765  0.17591506  0.5342773  ... -0.6526491  -0.5673434\n",
-      "  -0.75709546]]\n"
+      "Successfully loaded processed data.\n"
      ]
     }
    ],
    "source": [
-    "from bundle.DataCraft import * \n",
-    "from bundle.ModelCraft import * \n",
+    "# ===============================\n",
+    "# 1. Imports\n",
+    "# ===============================\n",
     "import numpy as np\n",
-    "\n",
-    "data = load_sentence_eeg_prob_data()\n",
-    "\n",
-    "if data:\n",
-    "    # Print example of converted item\n",
-    "    print(f\"Loaded {len(data)} items.\")\n",
-    "    \n",
-    "    # Convert to NumPy array to inspect the full shape\n",
-    "    eeg_array = np.array(data[0][\"eeg_chunk\"])\n",
-    "    print(\"Shape of EEG chunk:\", eeg_array.shape)\n",
-    "\n",
-    "    if data:\n",
-    "        print(\"Example of first item:\", data[1][\"character\"])\n",
-    "        print(\"Example of first item:\", data[1][\"eeg_chunk\"][0])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2025-06-14T16:18:47.697123700Z",
-     "start_time": "2025-06-14T16:18:35.899857900Z"
-    }
-   },
-   "id": "773fcec84cee98ed"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\University\\Year 4 semester 2\\ENCS5300\\BrainWaveResearch\\ecd\\venv\\lib\\site-packages\\keras\\src\\layers\\convolutional\\base_conv.py:107: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data preprocessing and model compilation complete.\n",
-      "X_train shape: (6294, 31, 78, 64, 1)\n",
-      "y_train shape: (6294, 28)\n",
-      "Number of classes: 28\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "import pickle\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from tensorflow.keras.utils import to_categorical\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from bundle.DataCraft import load_sentence_eeg_prob_data\n",
     "\n",
+    "# ===============================\n",
+    "# 2. Constants and Configs\n",
+    "# ===============================\n",
+    "NUM_CLASSES = 36  # 26 letters + 9 digits + 1 underscore\n",
+    "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "# Prepare data\n",
-    "X = np.array([d[\"eeg_chunk\"] for d in data])\n",
-    "y = np.array([d[\"character\"] for d in data])\n",
+    "# ===============================\n",
+    "# 3. Dataset Class\n",
+    "# ===============================\n",
+    "class EEGDataset(Dataset):\n",
+    "    def __init__(self, data, label_encoder):\n",
+    "        self.data = data\n",
+    "        self.label_encoder = label_encoder\n",
     "\n",
-    "# Encode labels\n",
+    "    def __len__(self):\n",
+    "        return len(self.data)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        chunk = np.array(self.data[idx][\"eeg_chunk\"], dtype=np.float32)  # (31, 78, 64)\n",
+    "        label = self.label_encoder.transform([self.data[idx][\"character\"]])[0]\n",
+    "        \n",
+    "        # Emphasize prediction timestep (index 30) by multiplying\n",
+    "        chunk[30] *= 2.0\n",
+    "\n",
+    "        return torch.tensor(chunk).unsqueeze(0), torch.tensor(label)  # Add channel dim: (1, 31, 78, 64)\n",
+    "\n",
+    "# ===============================\n",
+    "# 4. SE Block\n",
+    "# ===============================\n",
+    "class SEBlock(nn.Module):\n",
+    "    def __init__(self, channels, reduction=16):\n",
+    "        super(SEBlock, self).__init__()\n",
+    "        self.pool = nn.AdaptiveAvgPool3d(1)\n",
+    "        self.fc = nn.Sequential(\n",
+    "            nn.Linear(channels, channels // reduction, bias=False),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.Linear(channels // reduction, channels, bias=False),\n",
+    "            nn.Sigmoid()\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        b, c, _, _, _ = x.size()\n",
+    "        y = self.pool(x).view(b, c)\n",
+    "        y = self.fc(y).view(b, c, 1, 1, 1)\n",
+    "        return x * y.expand_as(x)\n",
+    "\n",
+    "# ===============================\n",
+    "# 5. Model Definition\n",
+    "# ===============================\n",
+    "class EEGCNN(nn.Module):\n",
+    "    def __init__(self, num_classes=NUM_CLASSES):\n",
+    "        super(EEGCNN, self).__init__()\n",
+    "        self.conv1 = nn.Conv3d(1, 32, kernel_size=3, padding=1)\n",
+    "        self.bn1 = nn.BatchNorm3d(32)\n",
+    "        \n",
+    "        self.conv2 = nn.Conv3d(32, 64, kernel_size=3, padding=1)\n",
+    "        self.bn2 = nn.BatchNorm3d(64)\n",
+    "\n",
+    "        self.se1 = SEBlock(64)\n",
+    "\n",
+    "        self.conv3 = nn.Conv3d(64, 128, kernel_size=3, padding=1)\n",
+    "        self.bn3 = nn.BatchNorm3d(128)\n",
+    "\n",
+    "        self.se2 = SEBlock(128)\n",
+    "\n",
+    "        self.pool = nn.AdaptiveAvgPool3d(1)\n",
+    "        self.fc1 = nn.Linear(128, 64)\n",
+    "        self.dropout = nn.Dropout(0.3)\n",
+    "        self.fc2 = nn.Linear(64, num_classes)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = F.relu(self.bn1(self.conv1(x)))       # -> (B, 32, 31, 78, 64)\n",
+    "        x = F.relu(self.bn2(self.conv2(x)))       # -> (B, 64, 31, 78, 64)\n",
+    "        x = self.se1(x)\n",
+    "\n",
+    "        x = F.relu(self.bn3(self.conv3(x)))       # -> (B, 128, 31, 78, 64)\n",
+    "        x = self.se2(x)\n",
+    "\n",
+    "        x = self.pool(x).squeeze()                # -> (B, 128)\n",
+    "        x = self.dropout(F.relu(self.fc1(x)))     # -> (B, 64)\n",
+    "        return self.fc2(x)                        # -> (B, 37)\n",
+    "\n",
+    "# ===============================\n",
+    "# 6. Load and Prepare Data\n",
+    "# ===============================\n",
+    "raw_data = load_sentence_eeg_prob_data()\n",
+    "if not raw_data:\n",
+    "    raise ValueError(\"Data failed to load. Check path or preprocessing.\")\n",
+    "\n",
+    "all_labels = [item[\"character\"] for item in raw_data]\n",
     "label_encoder = LabelEncoder()\n",
-    "y_encoded = label_encoder.fit_transform(y)\n",
-    "y_one_hot = to_categorical(y_encoded)\n",
+    "label_encoder.fit(all_labels)\n",
     "\n",
-    "# Split data\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y_one_hot, test_size=0.2, random_state=42)\n",
+    "train_data, test_data = train_test_split(raw_data, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Reshape X for CNN (add channel dimension)\n",
-    "X_train = X_train.reshape(X_train.shape[0], 31, 78, 64, 1)\n",
-    "X_test = X_test.reshape(X_test.shape[0], 31, 78, 64, 1)\n",
+    "train_dataset = EEGDataset(train_data, label_encoder)\n",
+    "test_dataset = EEGDataset(test_data, label_encoder)\n",
     "\n",
-    "# Create and compile model\n",
-    "model = create_eeg_cnn_model(input_shape=(31, 78, 64, 1), num_classes=len(label_encoder.classes_))\n",
-    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "train_loader = DataLoader(train_dataset, batch_size=16, shuffle=True)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=16)\n",
     "\n",
-    "print(\"Data preprocessing and model compilation complete.\")\n",
-    "print(\"X_train shape:\", X_train.shape)\n",
-    "print(\"y_train shape:\", y_train.shape)\n",
-    "print(\"Number of classes:\", len(label_encoder.classes_))\n",
+    "# ===============================\n",
+    "# 7. Train Loop\n",
+    "# ===============================\n",
+    "def train_model(model, loader, optimizer, criterion, epochs=10):\n",
+    "    model.train()\n",
+    "    for epoch in range(epochs):\n",
+    "        total_loss = 0\n",
+    "        for inputs, targets in loader:\n",
+    "            inputs, targets = inputs.to(DEVICE), targets.to(DEVICE)\n",
+    "            optimizer.zero_grad()\n",
+    "            outputs = model(inputs)\n",
+    "            loss = criterion(outputs, targets)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            total_loss += loss.item()\n",
     "\n",
-    "# Save preprocessed data and model for later use\n",
-    "with open(\"preprocessed_data.pkl\", \"wb\") as f:\n",
-    "    pickle.dump({\n",
-    "        \"X_train\": X_train,\n",
-    "        \"X_test\": X_test,\n",
-    "        \"y_train\": y_train,\n",
-    "        \"y_test\": y_test,\n",
-    "        \"label_encoder\": label_encoder\n",
-    "    }, f)\n",
+    "        print(f\"Epoch {epoch+1}/{epochs}, Loss: {total_loss:.4f}\")\n",
     "\n",
-    "model.save(\"initial_eeg_cnn_model.h5\")\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2025-06-14T16:19:56.222440400Z",
-     "start_time": "2025-06-14T16:18:47.702125900Z"
-    }
-   },
-   "id": "4647a57a354cc392"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\University\\Year 4 semester 2\\ENCS5300\\BrainWaveResearch\\ecd\\venv\\lib\\site-packages\\tensorflow\\python\\data\\ops\\structured_function.py:258: UserWarning: Even though the `tf.config.experimental_run_functions_eagerly` option is set, this option does not apply to tf.data functions. To force eager execution of tf.data functions, please use `tf.data.experimental.enable_debug_mode()`.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "\u001B[1m  5/197\u001B[0m \u001B[37m━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[1m18:01\u001B[0m 6s/step - accuracy: 0.0589 - loss: 4.4036"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "import tensorflow as tf\n",
-    "tf.config.run_functions_eagerly(True)\n",
-    "import pickle\n",
-    "from tensorflow.keras.models import load_model\n",
+    "# ===============================\n",
+    "# 8. Evaluation\n",
+    "# ===============================\n",
+    "def evaluate_model(model, loader):\n",
+    "    model.eval()\n",
+    "    correct = total = 0\n",
+    "    with torch.no_grad():\n",
+    "        for inputs, targets in loader:\n",
+    "            inputs, targets = inputs.to(DEVICE), targets.to(DEVICE)\n",
+    "            outputs = model(inputs)\n",
+    "            preds = outputs.argmax(dim=1)\n",
+    "            correct += (preds == targets).sum().item()\n",
+    "            total += targets.size(0)\n",
     "\n",
-    "# Load preprocessed data\n",
-    "with open(\"preprocessed_data.pkl\", \"rb\") as f:\n",
-    "    data = pickle.load(f)\n",
+    "    print(f\"Accuracy: {correct / total:.2%}\")\n",
     "\n",
-    "X_train = data[\"X_train\"]\n",
-    "X_test = data[\"X_test\"]\n",
-    "y_train = data[\"y_train\"]\n",
-    "y_test = data[\"y_test\"]\n",
-    "num_classes = len(data[\"label_encoder\"].classes_)\n",
+    "# ===============================\n",
+    "# 9. Run It\n",
+    "# ===============================\n",
+    "model = EEGCNN().to(DEVICE)\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
+    "criterion = nn.CrossEntropyLoss()\n",
     "\n",
-    "# Create and compile model (instead of loading a pre-compiled one)\n",
-    "model = create_eeg_cnn_model(input_shape=(31, 78, 64, 1), num_classes=num_classes)\n",
-    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
-    "\n",
-    "# Train the model\n",
-    "history = model.fit(X_train, y_train, epochs=10, batch_size=32, validation_data=(X_test, y_test))\n",
-    "\n",
-    "# Evaluate the model\n",
-    "loss, accuracy = model.evaluate(X_test, y_test)\n",
-    "print(f\"Test Loss: {loss:.4f}\")\n",
-    "print(f\"Test Accuracy: {accuracy:.4f}\")\n",
-    "\n",
-    "# Save the trained model\n",
-    "model.save(\"trained_eeg_cnn_model.h5\")\n",
-    "\n",
-    "print(\"Model training and evaluation complete.\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2025-06-14T16:20:50.435863500Z",
-     "start_time": "2025-06-14T16:19:56.253441800Z"
-    }
-   },
-   "id": "b651393c1b766dd6"
+    "train_model(model, train_loader, optimizer, criterion, epochs=15)\n",
+    "evaluate_model(model, test_loader)\n"
+   ]
   }
  ],
  "metadata": {
