--- a/ecd/jupyter/model/CNN.ipynb
+++ b/ecd/jupyter/model/CNN.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
-    "is_executing": true,
     "ExecuteTime": {
+     "end_time": "2025-06-15T08:17:48.890495900Z",
      "start_time": "2025-06-15T08:16:54.462279100Z"
     }
    },
@@ -18,6 +18,15 @@
      "text": [
       "Attempting to load processed data from: ../../data/sentences_eeg.pkl\n",
       "Successfully loaded processed data.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
      ]
     }
    ],
@@ -38,7 +47,9 @@
     "# 2. Constants and Configs\n",
     "# ===============================\n",
     "NUM_CLASSES = 36  # 26 letters + 9 digits + 1 underscore\n",
+    "MODEL_SAVE_PATH = \"trained_eegcnn_model.pth\"\n",
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(DEVICE)\n",
     "\n",
     "# ===============================\n",
     "# 3. Dataset Class\n",
@@ -132,8 +143,8 @@
     "train_dataset = EEGDataset(train_data, label_encoder)\n",
     "test_dataset = EEGDataset(test_data, label_encoder)\n",
     "\n",
-    "train_loader = DataLoader(train_dataset, batch_size=16, shuffle=True)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=16)\n",
+    "train_loader = DataLoader(train_dataset, batch_size=8, shuffle=True)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=8)\n",
     "\n",
     "# ===============================\n",
     "# 7. Train Loop\n",
@@ -152,6 +163,12 @@
     "            total_loss += loss.item()\n",
     "\n",
     "        print(f\"Epoch {epoch+1}/{epochs}, Loss: {total_loss:.4f}\")\n",
+    "        torch.cuda.empty_cache()\n",
+    "\n",
+    "    # Save the model after training\n",
+    "    torch.save(model.state_dict(), MODEL_SAVE_PATH)\n",
+    "    print(f\"Model saved to: {MODEL_SAVE_PATH}\")\n",
+    "\n",
     "\n",
     "# ===============================\n",
     "# 8. Evaluation\n",
@@ -177,7 +194,15 @@
     "criterion = nn.CrossEntropyLoss()\n",
     "\n",
     "train_model(model, train_loader, optimizer, criterion, epochs=15)\n",
-    "evaluate_model(model, test_loader)\n"
+    "evaluate_model(model, test_loader)\n",
+    "\n",
+    "# ===============================\n",
+    "# 10. Load \n",
+    "# ===============================\n",
+    "model = EEGCNN()\n",
+    "model.load_state_dict(torch.load(\"trained_eegcnn_model.pth\"))\n",
+    "model.to(DEVICE)\n",
+    "model.eval()"
    ]
   }
  ],
