--- a/ecd/jupyter/model/CNN.ipynb
+++ b/ecd/jupyter/model/CNN.ipynb
@@ -43,6 +43,12 @@
     "from sklearn.model_selection import train_test_split\n",
     "from bundle.DataCraft import load_sentence_eeg_prob_data\n",
     "\n",
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "# Add the path to the folder containing 'bundle' to sys.path\n",
+    "sys.path.append(os.path.abspath(\"../../\"))  # Adjust if needed\n",
+    "\n",
     "# ===============================\n",
     "# 2. Constants and Configs\n",
     "# ===============================\n",
