--- a/ecd/jupyter/model/CNN.ipynb
+++ b/ecd/jupyter/model/CNN.ipynb
@@ -2,38 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
+    "jupyter": {
+     "is_executing": true
+    },
     "ExecuteTime": {
-     "end_time": "2025-06-15T08:17:48.890495900Z",
-     "start_time": "2025-06-15T08:16:54.462279100Z"
+     "start_time": "2025-06-17T15:38:05.971911Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Attempting to load processed data from: ../../data/sentences_eeg.pkl\n",
-      "Successfully loaded processed data.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
-     ]
-    }
-   ],
    "source": [
     "# ===============================\n",
     "# 1. Imports\n",
     "# ===============================\n",
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "# Add the path to the folder containing 'bundle' to sys.path\n",
+    "sys.path.append(os.path.abspath(\"../../\"))  # Adjust if needed\n",
+    "\n",
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -42,12 +29,6 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
     "from bundle.DataCraft import load_sentence_eeg_prob_data\n",
-    "\n",
-    "import sys\n",
-    "import os\n",
-    "\n",
-    "# Add the path to the folder containing 'bundle' to sys.path\n",
-    "sys.path.append(os.path.abspath(\"../../\"))  # Adjust if needed\n",
     "\n",
     "# ===============================\n",
     "# 2. Constants and Configs\n",
@@ -159,7 +140,7 @@
     "    model.train()\n",
     "    for epoch in range(epochs):\n",
     "        total_loss = 0\n",
-    "        for inputs, targets in loader:\n",
+    "        for i, (inputs, targets) in enumerate(loader):\n",
     "            inputs, targets = inputs.to(DEVICE), targets.to(DEVICE)\n",
     "            optimizer.zero_grad()\n",
     "            outputs = model(inputs)\n",
@@ -168,7 +149,10 @@
     "            optimizer.step()\n",
     "            total_loss += loss.item()\n",
     "\n",
-    "        print(f\"Epoch {epoch+1}/{epochs}, Loss: {total_loss:.4f}\")\n",
+    "            if i % 10 == 0:\n",
+    "                print(f\"[Epoch {epoch+1}] Batch {i+1}/{len(loader)}, Loss: {loss.item():.4f}\")\n",
+    "\n",
+    "        print(f\"Epoch {epoch+1}/{epochs} complete. Total Loss: {total_loss:.4f}\")\n",
     "        torch.cuda.empty_cache()\n",
     "\n",
     "    # Save the model after training\n",
@@ -199,7 +183,7 @@
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "\n",
-    "train_model(model, train_loader, optimizer, criterion, epochs=15)\n",
+    "train_model(model, train_loader, optimizer, criterion, epochs=50)\n",
     "evaluate_model(model, test_loader)\n",
     "\n",
     "# ===============================\n",
@@ -209,26 +193,42 @@
     "model.load_state_dict(torch.load(\"trained_eegcnn_model.pth\"))\n",
     "model.to(DEVICE)\n",
     "model.eval()"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda\n",
+      "Attempting to load processed data from: ../../data/sentences_eeg.pkl\n",
+      "Successfully loaded processed data.\n",
+      "[Epoch 1] Batch 1/787, Loss: 3.5950\n",
+      "[Epoch 1] Batch 11/787, Loss: 3.5682\n",
+      "[Epoch 1] Batch 21/787, Loss: 3.5131\n",
+      "[Epoch 1] Batch 31/787, Loss: 3.4909\n"
+     ]
+    }
+   ],
+   "execution_count": null
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
