--- a/ecd/jupyter/data_processing/extract_sentence_data.ipynb
+++ b/ecd/jupyter/data_processing/extract_sentence_data.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "id": "8e74093c265c6a51",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "# Create EEG Sentences with Next-Char Probabilities\n"
@@ -15,16 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "189d752f13e679c2",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-14T07:07:15.193613900Z",
-     "start_time": "2025-06-14T07:07:15.133330Z"
-    },
     "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
+    "ExecuteTime": {
+     "end_time": "2025-06-26T11:52:42.968374300Z",
+     "start_time": "2025-06-26T11:52:41.554122900Z"
     }
    },
    "outputs": [],
@@ -46,10 +40,7 @@
    "cell_type": "markdown",
    "id": "e70acac7736264d4",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "# NL Predictor Model Definition \n"
@@ -57,16 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "1271fe52447729d6",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-14T07:07:15.245449800Z",
-     "start_time": "2025-06-14T07:07:15.142425100Z"
-    },
     "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
+    "ExecuteTime": {
+     "end_time": "2025-06-26T11:52:42.984087100Z",
+     "start_time": "2025-06-26T11:52:42.973234600Z"
     }
    },
    "outputs": [
@@ -128,10 +116,7 @@
    "cell_type": "markdown",
    "id": "dbead4f00a928323",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "# Add next-char prediction probabilities"
@@ -139,16 +124,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "fee7df9628f0876a",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-14T07:07:23.449744100Z",
-     "start_time": "2025-06-14T07:07:15.172861800Z"
-    },
     "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
+    "ExecuteTime": {
+     "end_time": "2025-06-26T11:52:46.895246500Z",
+     "start_time": "2025-06-26T11:52:42.984087100Z"
     }
    },
    "outputs": [
@@ -8269,6 +8251,8 @@
       "Skipping item with unexpected eeg_chunk length: 31\n",
       "Skipping item with unexpected eeg_chunk length: 31\n",
       "Skipping item with unexpected eeg_chunk length: 31\n",
+      "Skipping item with unexpected eeg_chunk length: 31\n",
+      "Skipping item with unexpected eeg_chunk length: 31\n",
       "Successfully converted and extended 7868 items.\n",
       "\n",
       "Finished processing. Collected data for 7868 character instances.\n"
@@ -8361,10 +8345,7 @@
    "cell_type": "markdown",
    "id": "80782d2769575848",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "# Save Processed Data"
@@ -8372,16 +8353,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "35f7cccb37f237b4",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-14T07:07:23.691179500Z",
-     "start_time": "2025-06-14T07:07:23.448318100Z"
-    },
     "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
+    "ExecuteTime": {
+     "end_time": "2025-06-26T11:52:47.074773400Z",
+     "start_time": "2025-06-26T11:52:46.895246500Z"
     }
    },
    "outputs": [
@@ -8409,10 +8387,7 @@
    "cell_type": "markdown",
    "id": "23a89401f27f2667",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "# Load Processed Data"
@@ -8420,16 +8395,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "5e44c00fca7cb60f",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-14T07:07:24.504452800Z",
-     "start_time": "2025-06-14T07:07:23.696223300Z"
-    },
     "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
+    "ExecuteTime": {
+     "end_time": "2025-06-26T11:52:47.180088800Z",
+     "start_time": "2025-06-26T11:52:47.064263200Z"
     }
    },
    "outputs": [
@@ -8443,19 +8415,26 @@
       "Example of first item: H\n",
       "Example of first item: 1\n",
       "Example of first item: THE QUICK DOG JUMPED OVER\n",
-      "Example of first item: [array([[ 1.9504154 ,  2.2442322 ,  1.9698964 , ...,  1.4474702 ,\n",
-      "         1.3025287 ,  1.7617115 ],\n",
-      "       [ 1.8555712 ,  2.1287162 ,  1.8950977 , ...,  1.6038033 ,\n",
-      "         1.4954389 ,  1.889984  ],\n",
-      "       [ 1.7028829 ,  1.9374998 ,  1.7584169 , ...,  1.7040414 ,\n",
-      "         1.6331682 ,  1.9601816 ],\n",
+      "Example of first item: [array([[-2.042544  , -0.6426774 ,  0.10181686, ..., -1.2080004 ,\n",
+      "        -0.07410982, -0.5174353 ],\n",
+      "       [-1.5926721 , -0.39685383,  0.26532504, ..., -0.6071886 ,\n",
+      "         0.17903064, -0.19450329],\n",
+      "       [-1.1295618 , -0.13941687,  0.43846393, ..., -0.02647058,\n",
+      "         0.4743725 ,  0.16327581],\n",
       "       ...,\n",
-      "       [ 0.40570083, -0.01885907,  0.21926583, ..., -0.7260041 ,\n",
-      "        -0.72525847, -0.72926086],\n",
-      "       [ 0.45789889,  0.0929183 ,  0.399929  , ..., -0.6825177 ,\n",
-      "        -0.64262927, -0.7352173 ],\n",
-      "       [ 0.46558765,  0.17591506,  0.5342773 , ..., -0.6526491 ,\n",
-      "        -0.5673434 , -0.75709546]], dtype=float32)]\n"
+      "       [-0.17774293,  0.07454094, -0.28601325, ..., -0.01124892,\n",
+      "        -0.11089705,  0.35440558],\n",
+      "       [ 0.17681588,  0.4533532 ,  0.10993246, ...,  0.5125489 ,\n",
+      "         0.10027732,  1.0042441 ],\n",
+      "       [ 0.62014157,  0.9117376 ,  0.64361393, ...,  1.2282215 ,\n",
+      "         0.4401919 ,  1.7872756 ]], dtype=float32)]\n",
+      "Example of first item: [[0.0149 0.0004 0.0004 ... 0.0034 0.0001 0.    ]\n",
+      " [0.0149 0.0004 0.0004 ... 0.0034 0.0001 0.    ]\n",
+      " [0.0149 0.0004 0.0004 ... 0.0034 0.0001 0.    ]\n",
+      " ...\n",
+      " [0.0149 0.0004 0.0004 ... 0.0034 0.0001 0.    ]\n",
+      " [0.0149 0.0004 0.0004 ... 0.0034 0.0001 0.    ]\n",
+      " [0.0149 0.0004 0.0004 ... 0.0034 0.0001 0.    ]]\n"
      ]
     }
    ],
@@ -8470,6 +8449,7 @@
     "        print(\"Example of first item:\", final_data[1][\"char_idx_in_sentence\"])\n",
     "        print(\"Example of first item:\", final_data[1][\"sentence\"])\n",
     "        print(\"Example of first item:\", final_data[1][\"eeg_chunk\"][0:1])\n",
+    "        print(\"Example of first item:\", final_data[1][\"eeg_chunk\"][30])\n",
     "else:\n",
     "    print(\"Failed to load data. Please check the file path.\")"
    ]
