--- a/ecd/jupyter/data_processing/visualizations.ipynb
+++ b/ecd/jupyter/data_processing/visualizations.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -71,27 +71,35 @@
     "        plt.close()\n",
     "        print(\"EEG sample line plot saved\")\n",
     "        \n",
-    "\n",
-    "    \n",
-    "    # Plot the probability matrix columns as line plots\n",
-    "    plt.figure(figsize=(14, 8))\n",
-    "    num_column_to_plot = 2  # Plot both columns\n",
-    "    \n",
-    "    # Access the converted_data from the sample item\n",
-    "    prob_chunk = sample_item['prob_chunk']\n",
-    "    \n",
-    "    for i in range(num_column_to_plot):\n",
-    "        plt.plot(prob_chunk[:, i], label=f'Column {i+1}')\n",
-    "    \n",
-    "    plt.title(f\"Probability Values for Character '{sample_item['character']}'\", fontsize=16)\n",
-    "    plt.xlabel('Row Index (0-77)', fontsize=14)\n",
-    "    plt.ylabel('Probability', fontsize=14)\n",
-    "    plt.legend()\n",
-    "    plt.grid(True, linestyle='--', alpha=0.7)\n",
-    "    plt.tight_layout()\n",
-    "    plt.savefig(f\"{output_dir}/prob_sample_lineplot.png\")\n",
-    "    plt.close()\n",
-    "    print(\"Probability matrix line plot saved\")\n",
+    "        \n",
+    "        sample = sample_item['eeg_chunk'][30]\n",
+    "        \n",
+    "        plt.figure(figsize=(14, 8))\n",
+    "        sns.heatmap(sample.T, cmap='viridis', cbar_kws={'label': 'Amplitude'})\n",
+    "        plt.title(f\"PROB Sample Heatmap for Character '{sample_item['character']}'\", fontsize=16)\n",
+    "        plt.xlabel('Time Steps', fontsize=14)\n",
+    "        plt.ylabel('Channels', fontsize=14)\n",
+    "        plt.tight_layout()\n",
+    "        plt.savefig(f\"{output_dir}/prob_sample_heatmap.png\")\n",
+    "        plt.close()\n",
+    "        print(\"EEG sample heatmap saved\")\n",
+    "        \n",
+    "        # EEG Sample Line Plot (for first few channels)\n",
+    "        plt.figure(figsize=(14, 8))\n",
+    "        num_channels_to_plot = min(5, sample.shape[1])  # Plot up to 5 channels\n",
+    "        for i in range(num_channels_to_plot):\n",
+    "            plt.plot(sample[:, i], label=f'Channel {i+1}')\n",
+    "        \n",
+    "        plt.title(f\"PROB Signal for First {num_channels_to_plot} Channels\", fontsize=16)\n",
+    "        plt.xlabel('Time Steps', fontsize=14)\n",
+    "        plt.ylabel('Amplitude', fontsize=14)\n",
+    "        plt.legend()\n",
+    "        plt.grid(True, linestyle='--', alpha=0.7)\n",
+    "        plt.tight_layout()\n",
+    "        plt.savefig(f\"{output_dir}/prob_sample_lineplot.png\")\n",
+    "        plt.close()\n",
+    "        print(\"EEG sample line plot saved\")\n",
+    "        \n",
     "    \n",
     "    # Collect key statistics\n",
     "    total_items = len(data)\n",
@@ -125,8 +133,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T19:48:42.466518800Z",
-     "start_time": "2025-06-08T19:48:42.399653700Z"
+     "end_time": "2025-06-26T13:16:38.417708800Z",
+     "start_time": "2025-06-26T13:16:38.370064700Z"
     }
    },
    "id": "b0a3bddf2668f1b6"
@@ -143,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -154,15 +162,16 @@
       "Generating visualizations in ../../visualizations...\n",
       "EEG sample heatmap saved\n",
       "EEG sample line plot saved\n",
-      "Probability matrix line plot saved\n",
+      "EEG sample heatmap saved\n",
+      "EEG sample line plot saved\n",
       "Data summary:DATA SHAPE SUMMARY\n",
       "==================\n",
       "\n",
-      "Total Items: 21\n",
-      "Unique Sentences: 1\n",
-      "Avg. Sentence Length: 25.00 chars\n",
+      "Total Items: 7868\n",
+      "Unique Sentences: 385\n",
+      "Avg. Sentence Length: 23.69 chars\n",
       "EEG Sample Shape: 78 × 64\n",
-      "Avg. Chunk Size: 30.00 samples\n",
+      "Avg. Chunk Size: 31.00 samples\n",
       "\n",
       "\n",
       "All visualizations saved to ../../visualizations/\n",
@@ -185,8 +194,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T19:48:44.044096Z",
-     "start_time": "2025-06-08T19:48:42.410744500Z"
+     "end_time": "2025-06-26T13:16:41.297569700Z",
+     "start_time": "2025-06-26T13:16:38.393310500Z"
     }
    },
    "id": "723be49fdf1891c0"
